# WhatSoup

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  scrape.py  setup.py  whatsoup.py
.github/workflows/: pylint.yml
test/: main.py
whatsoup/: utils.py  whatsoup.py
